--- a/client/src/components/toggle-theme/toggle-theme.styles.css
+++ b/client/src/components/toggle-theme/toggle-theme.styles.css
@@ -1,7 +1,4 @@
 .theme-toggle {
-  position: absolute;
-  top: 20px;
-  left: 20px;
   padding: 10px;
   border: none;
   border-radius: 50%;
@@ -9,8 +6,8 @@
   cursor: pointer;
   transition: all 0.2s ease-in-out;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  width: 40px;
-  height: 40px;
+  width: 22px;
+  height: 22px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -42,9 +39,7 @@
 
 @media screen and (max-width: 768px) {
   .theme-toggle {
-    top: 10px;
-    left: 10px;
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
   }
 }
